Fix some resize flickering when applying theme styles

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -22,6 +22,7 @@
 }
 
 #display {
+  bottom: 26px;
   border-bottom: 3px solid;
 }
 
